# Challenge4Access

./: .gitignore  Makefile.am  README  configure.ac  configure.ac~  configure~  get_hash.sh  guard_install.sh  installer.sh  plan_wip.txt  smartmontools-7.5.dmg
Guard/Guard/: GuardBin  Makefile.am  c4a_requests.c  c4a_requests.h  c4a_store.c  c4a_store.h  c4a_time.c  c4a_time.h  c4a_types.c  c4a_types.h  change_to_user.c  change_to_user.h  define.h  detection.c  detection.h  error.c  error.h  guard_main.c  guard_main.h  guard_tick.c  guard_tick.h  include.h  main.c  main.h  tasks.c  tasks.h
Profiles/: Challenge4Access.mobileconfig
ltocache/: llvmcache-0B600AA2E063986E2F93A363A255FE658E316102  llvmcache-0E5C9CA19DB78DF2616852438DA8F6EB17F7F8F0  llvmcache-156E53B7C416EDCFBB0D41BD7B816C14909A614E  llvmcache-22B81483A131BB969AE18F9C14299A1FB9C3B3D3  llvmcache-22EFBDE2A11EB9FB9E80FC2EF210F2B6DA1CC93F  llvmcache-27929A443543F2F78637FED72ED607C9B95EA994  llvmcache-590BB39A6EDFB53DC256A065D920A430E9E39951  llvmcache-6D8220C878664BC9C8D980A589D3ABF317EEBD03  llvmcache-6F5A27C2BAE101BB5B1B49E7E7082C5463CE68B9  llvmcache-77234D94D67C50E294ECA636B6FD3938E088EA0F  llvmcache-962E5BF0846B9DBAD0E165407DC17A50C55B25E9  llvmcache-9FD4960FDB3B612B9038CB31BAA3A1C94B2C9863  llvmcache-A7D1E2EDC3BF29E6DFF90A83FFCB93BEAE25C0F3  llvmcache-AA166783DCC2B72D55F7779E92284750505003DB  llvmcache-AD54C08BE226ED9F98D25BFDB8C6264F81BD00F7  llvmcache-C079647238B7342C5AA3687E3240A9C2C9462999  llvmcache-CFD3A5834A99CA8C979CCAC3B3D756796FB72C54  llvmcache-D3B9A2F6063321B985CF59A0C628A8387BB07E18  (+4 more)
(+72 files in other folders)
